# slice

./: .gitignore  Cargo.toml  Justfile  README.md
src/: main.rs  slice.rs
