[package]
name = "slice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }

[profile.release]
strip = "symbols"
lto = true

[dev-dependencies]
test-case = "3.3.1"
